# realsense_gazebo_plugin

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/realsense_gazebo_plugin/: RealSensePlugin.h  RealSensePlugin.hpp  gazebo_ros_accel_sensor.h  gazebo_ros_gyro_sensor.h  gazebo_ros_realsense.h  gazebo_ros_realsense.hpp  ros_qos_specifier.hpp
launch/: depth_proc.launch  realsense.launch
meshes/: t265.stl
models/realsense_camera/: model.sdf
realsense_camera/: CMakeLists.txt  RealSensePlugin.cc  RealSensePlugin.hh
src/: RealSensePlugin.cpp  gazebo_ros_accel_sensor.cpp  gazebo_ros_gyro_sensor.cpp  gazebo_ros_realsense.cpp  ros_qos_specifier.cpp
test/: realsense_streams.test  realsense_streams_test.cpp  template.cpp
urdf/: d435.gazebo.xacro  d435.urdf.xacro  realsense-d435.macro.xacro  t265.gazebo.xacro  t265.urdf.xacro
worlds/: realsense.world
