<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_plugin</name>
  <version>0.0.2</version>
  <description>Intel RealSense R200 Gazebo plugin package</description>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
